# Operating-Systems

./: .gitignore  README.md
Labs/CapdevilleAdamLab04/matrixMult/: CMakeLists.txt  matrixMult.c  typescript-processed.txt
Labs/CapdevilleAdamLab05/cpuScheduler/: CMakeLists.txt  cpuScheduler.c  in.txt  output-RR.txt  output-SJF.txt  processQueue.h
Labs/CapdevilleAdamLab06/philoBase/: CMakeLists.txt  philoBase.c  typescript-processed.txt  typescript.txt
Labs/CapdevilleAdamLab07/solvency/: CMakeLists.txt
Labs/CapdevilleAdamLab07/solvency/cmake_build_debug/: cmake_install.cmake  compile_commands.json
Labs/CapdevilleAdamLab07/solvency/src/: arrays.c  arrays.h  solvency.c
Labs/CapdevilleAdamLab08/dynLibExmpl/: compile_commands.json  giveMeNum.c  testDyLibExplicitMain  testDyLibImplicitMain  typescript.txt
Labs/CapdevilleAdamLab08/inverted/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  testInverted.c  typescript.txt
Labs/CapdevilleAdamLab09/replace/: CMakeLists.txt  replace.c  replace.h
Labs/lab01/list/: .list.c.swo  .main.c.swp  CMakeLists.txt  core  output_of_my_program.txt  typescript-processed.txt  typescript.txt
Labs/lab02/: CMakeLists.txt  help.txt  sub.c  sub.h
Labs/lab03/monitor/: CMakeLists.txt  typescript.txt
Lecture Code/cpuScheduler/: CMakeLists.txt  output-SJF.txt  processQueue.c
Lecture Code/lect04code/: signal.c  thrd-posix.c
Lecture Code/lect05code/: mynice.c  pthreads_prio.c  queue_selection_20_80.c  roulette_wheel_selection.c
Lecture Code/lect06code/: buffer.c  buffer.h  osx_spinlock.c  semaphore.c
Lecture Code/lect10code/: CMakeLists.txt  Makefile  cmake_install.cmake  dir.c  flock.1  flock.c  flock_3.c  fpos.c  mode_t.c  test.txt
Lecture Code/lect10code/test_links/: hardLinkedFile.txt
Projects/CapdevilleAdamProject1/simfs/: simfsFileTask1.dta  typescript-processed.txt
Projects/CapdevilleAdamProject2/: TODO
Projects/CapdevilleAdamProject2/disk/: CMakeLists.txt  disk.c  disk.h  task_1_testscript
comp362/Labs/CapdevilleAdamLab04/matrixMult/: in.txt  in2.txt  matrixMult.h  typescript.txt
comp362/Labs/CapdevilleAdamLab05/cpuScheduler/: cpuScheduler.h  output-FCFS.txt  processQueue.c  typescript-processed.txt  typescript.txt
comp362/Labs/CapdevilleAdamLab06/philoBase/: philoBase.c  philoBase.h
comp362/Labs/CapdevilleAdamLab07/solvency/: in.txt  typescript-processed.txt
comp362/Labs/CapdevilleAdamLab08/dynLibExmpl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testDyLibExplicitMain.c  testDyLibImplicitMain.c
comp362/Labs/CapdevilleAdamLab08/inverted/: Makefile  compile_commands.json  inverted.c  inverted.h  typescript-processed.txt  typescript.txt
comp362/Labs/CapdevilleAdamLab08/statLibExmpl/: CMakeLists.txt  testNoLib  testStatLib
comp362/Labs/CapdevilleAdamLab09/replace/: lruList.c  optArray.c
comp362/Labs/CapdevilleAdamProject1/simfs/: CMakeLists.txt  simfs.c  simfs.h  test_simfs.c
comp362/Labs/lab01/list/: .list.c.swp  .list.h.swo  .list.h.swp  .main.c.swn  (+5 more)
comp362/Lecture Code/cpuScheduler/: cpuScheduler.c  output-SRTF.txt  processQueue.h
comp362/Lecture Code/lect04code/: specific.c  threadCancel.c
comp362/Lecture Code/lect05code/: pthread_prio.c  pthreads_sched.c
comp362/Lecture Code/lect06code/: CMakeLists.txt  condvar.c  mutex.c  mutex_spinlock.c  readwrite.c
comp362/Lecture Code/lect10code/: CMakeCache.txt  compile_commands.json  flock_2.c  fstats.c  ftrunk.c
(+20 files in other folders)
