cmake_minimum_required(VERSION 3.12)
project(philosophers)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_FILE_OFFSET_BITS=64")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall --pedantic -g -O0 -D_DEBUG")
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(SOURCE_FILES philoBase.c)

add_executable(buffer buffer.c)
add_executable(semaphore semaphore.c)
add_executable(mutex mutex.c)
add_executable(mutex_spinlock mutex_spinlock.c)
add_executable(readwrite readwrite.c)
add_executable(condvar condvar.c)

find_package(Threads)
target_link_libraries(buffer ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(semaphore ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(mutex ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(mutex_spinlock ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(readwrite ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(condvar ${CMAKE_THREAD_LIBS_INIT})
